tests/types/errors/query_take_int_required.mochi
// `take` counts rows; the operand must be `int` (T055).
let xs: list<int> = [1, 2, 3]
let bad = from x in xs take "two" select x
